# rakh

./: .gitignore  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  release-please-config.json  skills-lock.json  tsconfig.json  vite.config.ts  vitest.setup.ts
.github/: PULL_REQUEST_TEMPLATE.md
.rakh/: scripts.json
assets/: index-CFi_HXn9.css  index-CJon_ulS.js  index-CVIq6xBS.css  index-CYsMkcKA.js  index-Ct7Vi9UQ.js  index-FEzKs2h8.css
docs/: architecture.md  artifacts.md  context-gateway.md  logging.md  macos-release-signing.md  subagents.md  tauri-updater-release.md  tools.md  windows-release-signing.md
scripts/: model-search.mjs  setup-cargo-target-config.mjs
src/: App.test.tsx  App.tsx  DESIGN_SYSTEM.md  THEMING.md  ThemePreview.tsx  WorkspacePage.test.tsx  WorkspacePage.tsx  cli.ts  codex.test.ts  codex.ts  githubIntegration.test.ts  githubIntegration.ts  githubIssues.test.ts  githubIssues.ts  index.css  main.tsx  materialSymbols.ts  notifications.test.ts  notifications.ts  projectScripts.test.ts  (+7 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  logs.json
src-tauri/icons/: icon.icns
src-tauri/icons-dev/: icon.icns
src-tauri/src/: agent_settings.rs  cli.rs  codex.rs  compaction.rs  db.rs  exec.rs  external_tools.rs  fs_ops.rs  gateway_policies.rs  git.rs  lib.rs  logging.rs  main.rs  mcp.rs  pty.rs  shell_env.rs  todos.rs  tool_artifacts.rs  utils.rs  whisper.rs
(+265 files in other folders)
