[package]
name = "app"
version = "0.5.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
portable-pty = "0.9.0"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-notification = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
ignore = "0.4"
grep = "0.3"
tauri-plugin-shell = "2"
base64 = "0.22"
hound = "3.5"
whisper-rs = "0.15.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3.25.0"
